# mserve3

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASE_FLOW.md  index.html  knip.json  package-lock.json  package.json  splashscreen.html  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.githooks/: pre-push
.github/workflows/: ci.yml  e2e-nightly.yml  release-tauri.yml
docs/: RELEASE_FLOW_DEPRECATED.md  testing.md
docs/ai prompts/: add.txt  fix.txt  rework.txt
scripts/: install-git-hooks.mjs
src/: CLAUDE.md  index.css  main.tsx
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: commands.rs  mod.rs  support.rs
src-tauri/src/app/commands/: backups.rs  config_files.rs  items.rs  java.rs  java_download.rs  navigation.rs  network.rs  networks.rs  providers.rs  runtime.rs  settings.rs  setup.rs  telemetry.rs
src-tauri/src/app/support/: backups.rs  core.rs  items.rs  mserve_config.rs  rcon.rs  runtime_io.rs  scan.rs  server_properties.rs  supervisor.rs  telemetry.rs  telemetry_store.rs  testkit.rs  windows_firewall.rs
src-tauri/tests/: e2e.rs
src/components/: app-sidebar.tsx  close-warning-dialog.tsx  create-server.tsx  edit-server-properties-button.tsx  edit-server-properties-form.tsx  import-server.tsx  java-runtime-select.tsx  logo.tsx  mode-toggle.tsx  motd-editor.tsx  motd-generator.tsx  mserve-repair-dialog.tsx  nav.tsx  open-folder-button.tsx  ram-selector.tsx  ram-slider-field.tsx  (+8 more)
(+164 files in other folders)
