[package]
name = "MSERVE"
version = "3.2.1"
description = "A minecraft server management tool"
authors = ["thetimblank"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hallo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = [] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-updater = { version = "2", default-features = false, features = ["native-tls", "zip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
trash = "5"
walkdir = "2"
zip = { version = "2", default-features = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

